terraform/security.tf
# Security Group
resource "aws_security_group" "strapi_sg_siva" {
  name        = "strapi-sg_siva"
  description = "Allow Strapi HTTP"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 1337
    to_port     = 1337
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
